# 4DOverview

./: CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py
docs/: HISTORICAL_README.md
freecad/_4d_overview_wb/: init_gui.py  version.py
freecad/_4d_overview_wb/core/: AssetCreatorWidget.py  CentralWindowGeneric.py  CentralWindowOverview.py  CentralWindowProjectBrowser.py  CentralWindowTimeLine.py  StartDockWidget.py
freecad/_4d_overview_wb/proext/: readme.txt
freecad/_4d_overview_wb/resources/translations/: README.md  _4d_overview_wb_es-ES.ts  update_translation.sh
